--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "joi": "^16.0.0"
   },
   "engines": {
-    "node": ">=0.10.x"
+    "node": ">=14.18.0"
   },
   "scripts": {
     "start": "node main.js"
