--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "readmeFilename": "README.md",
   "dependencies": {
-    "hapi": "^18.0.0",
-    "joi": "^16.0.0"
+    "hapi": "^18.0.0"
   },
   "engines": {
     "node": ">=14.18.0"
